--- a/index.html
+++ b/index.html
@@ -16,7 +16,25 @@
         <div class ="header-text">
             <h1>Let’s Help Those Who Are More In Need</h1>
             <p>Help others and give something back. I guarantee you will discover that while public service improves the lives and the world around you, its greatest reward is the enrichment and new meaning it will bring your own life.</p>
-            <a class ="button-link" href ="#">Donate Now</a>
+            <a class ="link-button" href ="#">Donate Now</a>
+        </div>
+    </section>
+
+    <section class ="amount">
+        <div class ="donate-today">
+            <h2>Donate Today</h2>
+            <p>Your support helps save the Bangladesh. Donate today to help tackle the most important conservation issues right now.</p>
+        </div>
+        <div class ="flexiable">
+            <h2 id ="tk100">100tk</h2>
+            <h2 id ="tk200">200tk</h2>
+            <h2 id ="tk500">500tk</h2>
+            <h2 id ="tk5000">5000tk</h2>
+        </div>
+        <div class ="input-field">
+            <input type ="text" placeholder ="Other Amount (Taka")>
+        </div>
+            <a class ="link-button" href ="#">Donate Now</a>
         </div>
     </section>
 </body>
