--- a/index.html
+++ b/index.html
@@ -32,10 +32,38 @@
             <h2 id ="tk5000">5000tk</h2>
         </div>
         <div class ="input-field">
-            <input type ="text" placeholder ="Other Amount (Taka")>
+            <input type ="text" placeholder ="Other Amount (Taka)">
         </div>
             <a class ="link-button" href ="#">Donate Now</a>
         </div>
+    </section>
+
+    <section class ="plan">
+        <div class ="our-donate">
+            <h2>Our Donate Plan</h2>
+            <p>When you make a tax-deductible donation to The Nature Conservancy, you're supporting the most effective solutions to the environment's</p>
+        </div>
+        <div class ="box">
+            <div class ="food">
+                <img src ="image/food.png">
+                <h3>Food for a family</h3>
+                <p>Help others and give something back. I guarantee you will discover that while public service improves the lives and the world around you, its greatest</p>
+            </div>
+            <div class ="shelter">
+                <img src ="image/shelter.png">
+                <h3>Shelter for a family</h3>
+                <p>When you make a tax-deductible donation to The Nature Conservancy, you're supporting the most effective solutions to the environment world around you</p>
+            </div>
+            <div class ="frame">
+                <img src ="image/Frame.png">
+                <h3>Education for a child</h3>
+                <p>Help others and give something back. I guarantee you will discover that while public service improves the lives and the world around you, its greatest</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        
     </section>
 </body>
 </html>
