--- a/index.html
+++ b/index.html
@@ -47,23 +47,32 @@
             <div class ="food">
                 <img src ="image/food.png">
                 <h3>Food for a family</h3>
-                <p>Help others and give something back. I guarantee you will discover that while public service improves the lives and the world around you, its greatest</p>
+                <p>provide emergency medical care , (5) distribute seeds to 2,000 households (6) repair and reconstruct around 100 fully or partially damaged schools and community</p>
             </div>
             <div class ="shelter">
                 <img src ="image/shelter.png">
                 <h3>Shelter for a family</h3>
-                <p>When you make a tax-deductible donation to The Nature Conservancy, you're supporting the most effective solutions to the environment world around you</p>
+                <p>Not a single family, who became homeless for sudden floods and river erosion over the last week, turned up at the government opened shelters knowing that it might</p>
             </div>
             <div class ="frame">
                 <img src ="image/Frame.png">
                 <h3>Education for a child</h3>
-                <p>Help others and give something back. I guarantee you will discover that while public service improves the lives and the world around you, its greatest</p>
+                <p>drowning and malnutrition. Tragically, three children below the age of 15 died after being struck by lightning in thunderstorms that set off torrential rain.</p>
             </div>
         </div>
     </section>
 
-    <section>
-        
+    <section class ="update">
+        <h2>Get My Updates</h2>
+        <p>These updates will start once you click on subcribe. You cannot proceed further until you update.</p>
+        <form>
+            <input type ="email" placeholder ="Email">
+            <button>Subscribe</button>
+        </form>
     </section>
 </body>
+<footer>
+    <h3>Be Humble</h3>
+    <p>Copyright © 2022 by Abdur Rahman. All Rights Reserved</p>
+</footer>
 </html>
