--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2>Get My Updates</h2>
         <p>These updates will start once you click on subcribe. You cannot proceed further until you update.</p>
         <form>
-            <input type ="email" placeholder ="Email">
+            <input id ="email" type ="email" placeholder ="Email">
             <button>Subscribe</button>
         </form>
     </section>
